--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -25,6 +25,14 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Cache Gradle
+        uses: actions/cache@v3
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: Install helper packages
         run: sudo apt-get update && sudo apt-get install -y wget unzip
 
@@ -40,7 +48,9 @@ jobs:
           $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT \
             "platform-tools" \
             "platforms;android-35" \
-            "build-tools;35.0.0"
+            "build-tools;35.0.0" \
+            "extras;android;m2repository" \
+            "extras;google;m2repository"
 
       - name: Expose Android SDK to PATH and env
         run: |
@@ -62,9 +72,10 @@ jobs:
           cordova platform rm android || true
           cordova platform add android@latest --save
 
-      - name: Build Android App Bundle (AAB)
+      - name: Build Android App (AAB + APK)
         run: |
           cordova build android --release --no-telemetry --verbose
+          cordova build android --release -- --packageType=bundle
 
       - name: List output files
         run: |
@@ -89,7 +100,7 @@ jobs:
           name: MyWeatherApp-aab
           path: platforms/android/app/build/outputs/bundle/release/**/*.aab
 
-      - name: Upload APK artifact (optional)
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: MyWeatherApp-apk
