--- a/package.json
+++ b/package.json
@@ -11,5 +11,15 @@
     "ecosystem:cordova"
   ],
   "author": "Apache Cordova Team",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "cordova-plugin-file": "^8.1.3",
+    "cordova-plugin-local-notifications": "^1.0.0"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-file": {},
+      "de.appplant.cordova.plugin.local-notification": {}
+    }
+  }
 }
