--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-plugin-file": "^8.1.3",
+    "cordova-plugin-local-notification-androidx": "github:mathiasscheffe/cordova-plugin-local-notifications-androidx",
     "cordova-plugin-local-notifications": "^1.0.0"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-file": {},
-      "de.appplant.cordova.plugin.local-notification": {}
+      "de.appplant.cordova.plugin.local-notification": {},
+      "cordova-plugin-local-notification-androidx": {}
     }
   }
 }
